--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -84,5 +84,12 @@
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
-
+    <filter>
+        <filter-name>ErrorHandlingFilter</filter-name>
+        <filter-class>application.middleware.ErrorHandlingFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>ErrorHandlingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
