--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>api</groupId>
-    <artifactId>ApiPeriodicals</artifactId>
+    <artifactId>periodicals-java-backend-paltform</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <dependencies>
